[package]
name = "muetl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.31"
kameo = "0.18.0"
kameo_actors = "0.3.0"
tokio = { version = "1.48.0", features = ["full", "sync"] }
tokio-stream = "0.1.17"
rdkafka = { version = "0.25", features = ["cmake-build"] }
envconfig = "0.11.0"
phf = { version = "0.13.1", features = ["macros"] }
async-trait = "0.1.89"
