[package]
name = "muetl-tasks"
version = "0.1.0"
edition = "2021"
description = "Common utility tasks for muetl (sources, nodes, sinks)"

[dependencies]
muetl = { path = "../.." }
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["full", "sync"] }
tracing = "0.1.43"
serde = "1.0"
serde_json = "1.0"
rquickjs = { version = "0.6", features = ["bindgen", "loader"] }
aws-sdk-s3 = "1"
aws-config = "1"
regex = "1"
cron = "0.13"
chrono = "0.4"
